--- a/style.css
+++ b/style.css
@@ -40,5 +40,25 @@
   margin-left: -30px;
 }
 .thirdsec {
-  height:120px;
+  height: 120px;
+}
+.fourthsec {
+  height: 100px;
+}
+.fifthsec {
+  height: 400px;
+}
+.pic1 {
+  height: 200px;
+  width: 240px;
+  transform: rotate(-15deg);
+}
+.pic2 {
+  height: 200px;
+  width: 240px;
+  transform: rotate(15deg);
+}
+.box1{
+height:150px;
+width: 150px;
 }
